# mindline

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHAT_HISTORY_FIX.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETED_WORK.md  CONFIG_TEMPLATE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  Dockerfile  Dockerfile.app  Dockerfile.signaling  E2E_TEST_REPORT_2025-09-29.md  FINAL_TEST_REPORT.md  HARDENING_NOTES.md  HYBRID_DEPLOYMENT.md  LICENSE  MARKETING.md  MESH_CONNECTIVITY_TEST.md  MIGRATION_COMPLETE.md  MULTI_USER_DEBUG.md  PERFORMANCE.md  PHASE3_UI_COMPLETE.md  PRIVACY.md  PRODUCT.md  PRODUCTION_CHECKLIST.md  PROGRESS_NOTES.md  README.md  RECONNECTION_TESTING.md  RUST-MIGRATION.md  SECURITY.md  SIGNALING_SERVERS.md  (+73 more)
.cargo/: config
.github/: PULL_REQUEST_TEMPLATE.md
MIGRATION/: PHASE-0-PREPARATION.md  PHASE-1-BUG-FIXES.md  PHASE-2-VALIDATION.md  PHASE-3-STATE-MANAGEMENT.md  PHASE-4-BUSINESS-LOGIC.md  PHASE-5-RUST-FEATURES.md  PHASE-6-CLEANUP.md  PHASE-7-WEBRTC.md  README.md  ROLLBACK-PROCEDURES.md  UNUSED-FUNCTIONS.md  baseline-metrics.txt  known-issues.txt  progress.md
css/: main.css  styles.css
dev-tests/: test-basic.js  test-memory-fix.js  test-phase3.js  test_room_id.html  test_room_id_local.js
docs/: BUNDLE_VERIFICATION.md  CLAIMS.md  PROTOCOL.md  ai-skills.md  mcp-usage.md
js/: app-state.js  app-state.js.backup  app.js  config.js  debug-utils.js  env-config.js  event-handlers.js  index.js  logger.js  message-manager.js  p2p-manager.js  room-history.js  room-manager.js  rust-logger.js  sanitizer.js  state.js  state.js.backup  theme-manager.js  ui.js  user-manager.js  user-messages.js  ux-enhancements.js  wasm-manager.js  webrtc.js
pkg/: README.md  mindline.d.ts  mindline.js  mindline_bg.wasm  mindline_bg.wasm.d.ts  package.json
playwright-report/: index.html
rust-migration/: README.md  phase-1-state-management.md  phase-2-input-sanitization.md  phase-3-message-processing.md  phase-4-webrtc-coordination.md  phase-5-logging.md  phase-6-advanced-features.md
scripts/: benchmark-ice.js  benchmark-relay.mjs  inject-env.js  signaling-soak-test.mjs  test-e2e-with-signaling.sh
signaling-server/: package.json  server.js
src/: AGENTS.md  advanced_api.rs  app.css  app.html  core.rs  crypto.rs  hooks.server.ts  lib.rs  logger.rs  logging_api.rs  message_api.rs  messages.rs  p2p.rs  (+10 more)
src-rust/: AGENTS.md  advanced_api.rs  core.rs  crypto.rs  crypto_api.rs  lib.rs  logger.rs  message_api.rs  messages.rs  state_api.rs  storage.rs  types.rs  utils.rs
(+151 files in other folders)
