[package]
name = "mindline"
version = "0.1.0"
edition = "2021"
description = "A secure P2P chat application with real-time typing indicators"
authors = ["Law Zava"]
repository = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcConfiguration",
    "RtcDataChannelInit",
    "RtcIceCandidate",
    "RtcSessionDescription",
    "RtcSdpType",
    "RtcOfferOptions"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
ring = "0.17.0"
uuid = { version = "1.3.0", features = ["v4", "js", "serde"] }
console_error_panic_hook = "0.1.7"