[package]
name = "mindline"
version = "0.1.0"
edition = "2021"
description = "A secure P2P chat application with real-time typing indicators"
authors = ["Law Zava"]
repository = ""

[lib]
crate-type = ["cdylib"]
path = "src-rust/lib.rs"

[dependencies]

wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Location",
    "History",
    "Crypto",
    "Storage",
    "Performance",
    "PerformanceTiming",
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcConfiguration",
    "RtcDataChannelInit",
    "RtcIceCandidate",
    "RtcSessionDescription",
    "RtcSdpType",
    "RtcOfferOptions",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbRequest",
    "IdbKeyRange",
    "IdbIndex",
    "IdbCursor",
    "IdbTransactionMode",
    "DomStringList"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.3.0", features = ["v4", "js", "serde"] }
console_error_panic_hook = "0.1.7"
regex = "1.10"
hex = "0.4"
wasm-bindgen-futures = "0.4"
sha2 = "0.10"
base64 = "0.21"
futures = "0.3"

# Optimize for small WASM size in release builds
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization for smaller binary
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Remove unwinding code
[dev-dependencies]
wasm-bindgen-test = "0.3.34"
